--- a/FP1C4 - 00 Aulas Iniciais/Aula Inagural/nbproject/project.properties
+++ b/FP1C4 - 00 Aulas Iniciais/Aula Inagural/nbproject/project.properties
@@ -38,12 +38,14 @@ endorsed.classpath=
 excludes=
 file.reference.mariadb-java-client-3.0.5.jar=lib/mariadb-java-client-3.0.5.jar
 file.reference.mysql-connector-java-8.0.20.jar=lib/mysql-connector-java-8.0.20.jar
+file.reference.mysql-connector-java-8.0.20.jar-1=Q:\\Danilo Quirino\\mysql-connector-java-8.0.20.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.mysql-connector-java-8.0.20.jar}:\
-    ${file.reference.mariadb-java-client-3.0.5.jar}
+    ${file.reference.mariadb-java-client-3.0.5.jar}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
