--- a/FP1C4 - 00 Aulas Iniciais/Tabelas com Relacionamentos/nbproject/project.properties
+++ b/FP1C4 - 00 Aulas Iniciais/Tabelas com Relacionamentos/nbproject/project.properties
@@ -4,8 +4,6 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Aula Inaugural
-application.vendor=Aluno
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,13 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Aula_Inaugural.jar
+dist.jar=${dist.dir}/Tabelas_com_Relacionamentos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Aula_Inaugural
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/Tabelas_com_Relacionamentos
 excludes=
-file.reference.mysql-connector-java-8.0.20.jar=lib/mysql-connector-java-8.0.20.jar
+file.reference.mysql-connector-java-8.0.20.jar=Q:\\Danilo Quirino\\mysql-connector-java-8.0.20.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -76,8 +73,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Aula_Inaugural
-main.class=br.edu.ifsp.pep.aulainaugural.Principal
+jlink.launcher.name=Tabelas_com_Relacionamentos
+main.class=br.edu.ifsp.pep.relacionamento.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
