--- a/FP1C4 - 00 Aulas Iniciais/Tabelas com Relacionamentos/nbproject/project.properties
+++ b/FP1C4 - 00 Aulas Iniciais/Tabelas com Relacionamentos/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Tabelas com Relacionamentos
+application.vendor=aluno
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +34,7 @@ dist.jar=${dist.dir}/Tabelas_com_Relacionamentos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tabelas_com_Relacionamentos
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.20.jar=Q:\\Danilo Quirino\\mysql-connector-java-8.0.20.jar
 includes=**
@@ -78,7 +81,7 @@ main.class=br.edu.ifsp.pep.relacionamento.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_11
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
