Funções de Inclusão de Veiculos, Acessórios no Banco de Dados

--- a/FP1C4 - 00 Aulas Iniciais/Tabelas Muitos Para Muitos/nbproject/project.properties
+++ b/FP1C4 - 00 Aulas Iniciais/Tabelas Muitos Para Muitos/nbproject/project.properties
@@ -36,12 +36,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tabelas_Muitos_Para_Muitos
 endorsed.classpath=
 excludes=
+file.reference.mariadb-java-client-3.0.5.jar=../../mariadb-java-client-3.0.5.jar
 file.reference.mysql-connector-java-8.0.20.jar=Q:\\Danilo Quirino\\mysql-connector-java-8.0.20.jar
+file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-java-8.0.20.jar}:\
+    ${file.reference.mariadb-java-client-3.0.5.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
