--- a/FP1C4 - 00 Aulas Iniciais/02 Tabelas Muitos Para Muitos/nbproject/project.properties
+++ b/FP1C4 - 00 Aulas Iniciais/02 Tabelas Muitos Para Muitos/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Tabelas Muitos Para Muitos
+application.title=02 Tabelas Muitos Para Muitos
 application.vendor=Aluno
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -30,14 +30,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Tabelas_Muitos_Para_Muitos.jar
+dist.jar=${dist.dir}/02_Tabelas_Muitos_Para_Muitos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Tabelas_Muitos_Para_Muitos
+dist.jlink.output=${dist.jlink.dir}/02_Tabelas_Muitos_Para_Muitos
 endorsed.classpath=
 excludes=
 file.reference.mariadb-java-client-3.0.5.jar=../../mariadb-java-client-3.0.5.jar
-file.reference.mysql-connector-java-8.0.20.jar=Q:\\Danilo Quirino\\mysql-connector-java-8.0.20.jar
+file.reference.mysql-connector-java-8.0.20.jar=Q:/Danilo Quirino/mysql-connector-java-8.0.20.jar
 file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
@@ -80,7 +80,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Tabelas_Muitos_Para_Muitos
+jlink.launcher.name=02_Tabelas_Muitos_Para_Muitos
 main.class=br.edu.ifsp.pep.mm.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
