--- a/FP1C4 - 01 Chaves Primárias Compostas/02 Muitos Para Muitos Com Atributos/nbproject/project.properties
+++ b/FP1C4 - 01 Chaves Primárias Compostas/02 Muitos Para Muitos Com Atributos/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=02_Muitos_Para_Muitos_Com_Atributos
-main.class=
+main.class=br.edu.ifsp.pep.mma.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
