--- a/FP1C4 - 01 Chaves Primárias Compostas/03 Herança/nbproject/project.properties
+++ b/FP1C4 - 01 Chaves Primárias Compostas/03 Herança/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=03_Heran_a
-main.class=
+main.class=br.edu.ifsp.pep.heranca.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
