--- a/FP1C4 - 01 Conceitos de JPA/04 Herança Join/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/04 Herança Join/nbproject/project.properties
@@ -28,12 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/03_Heran_a.jar
+dist.jar=${dist.dir}/04_Heran_a_Join.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/03_Heran_a
+dist.jlink.output=${dist.jlink.dir}/04_Heran_a_Join
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar=/home/daniloquirino/MEGA/DOCUMENTOS/05 - CI\u00caNCIAS DA COMPUTA\u00c7\u00c3O - IFSP/Ferramentas de Programa\u00e7\u00e3o I/mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -73,8 +73,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=03_Heran_a
-main.class=br.edu.ifsp.pep.heranca.st.Principal
+jlink.launcher.name=04_Heran_a_Join
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
