--- a/FP1C4 - 01 Conceitos de JPA/04 Herança Join/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/04 Herança Join/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=04_Heran_a_Join
-main.class=
+main.class=br.edu.ifsp.pep.herancajoin.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
