Continuando a resolução do Exercício

--- a/FP1C4 - 01 Conceitos de JPA/06 Exercicio JPA Banco/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/06 Exercicio JPA Banco/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=06_Exercicio_JPA_Banco
-main.class=
+main.class=br.ifsp.edu.pep.banco.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
