--- a/FP1C4 - 01 Conceitos de JPA/03 Herança Single Table/build.xml
+++ b/FP1C4 - 01 Conceitos de JPA/03 Herança Single Table/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="03_Herança" default="default" basedir=".">
-    <description>Builds, tests, and runs the project 03 Herança.</description>
+<project name="03_Herança_Single_Table" default="default" basedir=".">
+    <description>Builds, tests, and runs the project 03 Herança Single Table.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="03_Herança-impl.jar">
+        <target name="run" depends="03_Herança_Single_Table-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
