--- a/FP1C4 - 01 Conceitos de JPA/03 Herança Single Table/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/03 Herança Single Table/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/03_Heran_a.jar
+dist.jar=${dist.dir}/03_Heran_a_Single_Table.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/03_Heran_a
+dist.jlink.output=${dist.jlink.dir}/03_Heran_a_Single_Table
 excludes=
 file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=03_Heran_a
+jlink.launcher.name=03_Heran_a_Single_Table
 main.class=br.edu.ifsp.pep.heranca.st.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
