--- a/FP1C4 - 01 Conceitos de JPA/03 Herança Single Table/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/03 Herança Single Table/nbproject/project.properties
@@ -38,7 +38,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
+    ${reference.Bibliotecas.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,6 +80,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Bibliotecas=../Bibliotecas
+reference.Bibliotecas.jar=${project.Bibliotecas}/dist/Bibliotecas.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
