--- a/FP1C4 - 01 Conceitos de JPA/Bibliotecas/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/Bibliotecas/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -28,18 +28,15 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/01_Chaves_Compostas_idClass.jar
+dist.jar=${dist.dir}/Bibliotecas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/01_Chaves_Compostas_idClass
+dist.jlink.output=${dist.jlink.dir}/Bibliotecas
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}:\
-    ${reference.Bibliotecas.jar}
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,14 +71,10 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=01_Chaves_Compostas_idClass
-main.class=br.edu.ifsp.pep.cpc.Principal
-manifest.file=manifest.mf
+jlink.launcher.name=Bibliotecas
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.Bibliotecas=../../../../../../\u00c1rea de Trabalho/CI\u00caNCIAS DA COMPUTA\u00c7\u00c3O/Ferramentas de Programa\u00e7\u00e3o I/FP1C4 - 01 Conceitos de JPA/Bibliotecas
-reference.Bibliotecas.jar=${project.Bibliotecas}/dist/Bibliotecas.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
