--- a/FP1C4 - 01 Conceitos de JPA/07 Consultas Named Queries/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/07 Consultas Named Queries/nbproject/project.properties
@@ -28,12 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/07_Consultas.jar
+dist.jar=${dist.dir}/07_Consultas_Named_Queries.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/07_Consultas
+dist.jlink.output=${dist.jlink.dir}/07_Consultas_Named_Queries
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=/home/daniloquirino/MEGA/DOCUMENTOS/05 - CI\u00caNCIAS DA COMPUTA\u00c7\u00c3O - IFSP/Ferramentas de Programa\u00e7\u00e3o I/mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar=../../../../../MEGA/DOCUMENTOS/05 - CI\u00caNCIAS DA COMPUTA\u00c7\u00c3O - IFSP/Ferramentas de Programa\u00e7\u00e3o I/mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=07_Consultas
+jlink.launcher.name=07_Consultas_Named_Queries
 main.class=br.edu.ifsp.pep.consulta.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
