--- a/FP1C4 - 01 Conceitos de JPA/06b Exercício Livraria/nbproject/project.properties
+++ b/FP1C4 - 01 Conceitos de JPA/06b Exercício Livraria/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -77,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=06b_Exerc_cio_Livraria
-main.class=
+main.class=br.edu.ifsp.pep.livraria.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
