--- a/FP1C4 - 02 Primeira Avaliação/02 Avaliação Prática I - Resolução Professor/nbproject/project.properties
+++ b/FP1C4 - 02 Primeira Avaliação/02 Avaliação Prática I - Resolução Professor/nbproject/project.properties
@@ -33,7 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/02_Avalia__o_Pr_tica_I_-_Resolu__o_Professor
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=/home/daniloquirino/MEGA/DOCUMENTOS/05 - CI\u00caNCIAS DA COMPUTA\u00c7\u00c3O - IFSP/Ferramentas de Programa\u00e7\u00e3o I/mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar=../../../../../MEGA/DOCUMENTOS/05 - CI\u00caNCIAS DA COMPUTA\u00c7\u00c3O - IFSP/Ferramentas de Programa\u00e7\u00e3o I/mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
