--- a/FP1C4 - 02 Primeira Avaliação/02 Avaliação Prática I - Resolução Professor/nbproject/project.properties
+++ b/FP1C4 - 02 Primeira Avaliação/02 Avaliação Prática I - Resolução Professor/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=02_Avalia__o_Pr_tica_I_-_Resolu__o_Professor
-main.class=
+main.class=br.edu.ifsp.pep.resolucaolocadora.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
