--- a/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
+++ b/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
@@ -1,11 +1,12 @@
 annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
+annotation.processing.enabled.in.editor=true
 annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=locadora-veiculo
+application.title=01 Locadora de Veiculos
 application.vendor=aluno
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,17 +31,20 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/locadora-veiculo.jar
+dist.jar=${dist.dir}/01_Locadora_de_Veiculos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/locadora-veiculo
+dist.jlink.output=${dist.jlink.dir}/01_Locadora_de_Veiculos
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${reference.util.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
     ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -77,14 +81,29 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=locadora-veiculo
+jlink.launcher.name=01_Locadora_de_Veiculos
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=br.edu.ifsp.pep.Principal
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.util=../util
-reference.util.jar=${project.util}/dist/util.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
