--- a/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
+++ b/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
@@ -37,15 +37,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/01_Locadora_de_Veiculos
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}:\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
