Definição do layout da visão Locação

--- a/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
+++ b/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/01_Locadora_de_Veiculos
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=/home/daniloquirino/Apps/Neteans Componentes/jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -45,7 +46,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
