--- a/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
+++ b/FP1C4 - 03 Interfaces Gráficas/01 Locadora de Veiculos/nbproject/project.properties
@@ -37,6 +37,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/01_Locadora_de_Veiculos
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=/home/daniloquirino/Apps/Netbeans Componentes/JasperSoft Reports/commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=/home/daniloquirino/Apps/Netbeans Componentes/JasperSoft Reports/commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=/home/daniloquirino/Apps/Netbeans Componentes/JasperSoft Reports/commons-digester-1.7.jar
+file.reference.commons-logging-1.1.jar=/home/daniloquirino/Apps/Netbeans Componentes/JasperSoft Reports/commons-logging-1.1.jar
+file.reference.groovy-all-1.5.5.jar=/home/daniloquirino/Apps/Netbeans Componentes/JasperSoft Reports/groovy-all-1.5.5.jar
+file.reference.itext-2.1.7.jar=/home/daniloquirino/Apps/Netbeans Componentes/JasperSoft Reports/itext-2.1.7.jar
+file.reference.jasperreports-6.6.0.jar=/home/daniloquirino/Apps/Netbeans Componentes/JasperSoft Reports/jasperreports-6.6.0.jar
 file.reference.jcalendar-1.4.jar=/home/daniloquirino/Apps/Neteans Componentes/jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.22.jar=../../mysql-connector-java-8.0.22.jar
 includes=**
@@ -47,7 +54,14 @@ javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.mysql-connector-java-8.0.22.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-6.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -105,7 +119,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
